Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54195

QML drag source is wrong if dragType == Drag.Automatic

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.3
    • 5.6.0, 5.6.1, 5.7.0
    • None
    • ec73b9ff3b0064cf7760baeb826d912d9a30d227

    Description

      Please try the attached test case. When you start dragging one rectangle, the message appearing on the console should say:

      qml: Drag source is QQuickRectangle(0x...)

      but it says:

      qml: Drag source is QQuickDragAttached(0x...)

      This does not happen if the Drag.dragType: Drag.Automatic line is removed: internal drags work fine.
      The problem only affects external DnD operation, and I think it's due to the way that the QDrag object is constructed in src/quick/items/qquickdrag.cpp. I'll try to prepare a patch.

      Attachments

        For Gerrit Dashboard: QTBUG-54195
        # Subject Branch Project Status CR V

        Activity

          People

            mardy Alberto Mardegan
            mardy Alberto Mardegan
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes