QQuickDragAttached: set actual drag source when instantiating QDrag

QDrag's constructor parameter is used as drag source in a DnD operation;
objects receiving QDrag{Enter,Move,Leave}Event will get this object when
calling event->source().

Task-number: QTBUG-54195
Change-Id: Id3ed7e8d62a8539983c7c21c45f8f1d72f9a2e30
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>