src/quick/items/qquickdrag.cpp
@@ -713,7 +713,7 @@ Qt::DropAction QQuickDragAttachedPrivate::startDrag(Qt::DropActions supportedAct
 {
     Q_Q(QQuickDragAttached);
 
-    QDrag *drag = new QDrag(q);
+    QDrag *drag = new QDrag(source ? source : q);
     QMimeData *mimeData = new QMimeData();
 
     Q_FOREACH (const QString &key, externalMimeData.keys()) {
